# healthcare-platform

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_TASKS.md  KICKOFF_PROMPT.md  PROGRESS.md  README.md  SPECIFICATION.md  docker-compose.yml
ai-service/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
ai-service/app/: config.py  main.py
ai-service/app/api/: deps.py
ai-service/app/api/v1/: router.py
ai-service/app/api/v1/endpoints/: analysis.py  health.py  ml.py
ai-service/app/api/v1/schemas/: analysis.py
ai-service/app/core/: enums.py  exceptions.py  symptom_router.py
ai-service/app/core/entities/: analysis_session.py  diagnosis.py  feedback.py  medical_features.py  question.py
ai-service/app/core/interfaces/: __init__.py  domain_strategy.py  llm_provider.py  ml_predictor.py  session_repository.py
ai-service/app/domains/: registry.py
ai-service/app/domains/cardiology/: domain.py  features.py  llm_interviewer.py  prompts.py  static_questions.py  triage_rules.py
ai-service/app/domains/general/: domain.py
ai-service/app/domains/neurology/: domain.py
ai-service/app/infrastructure/db/: models.py  session.py
ai-service/app/infrastructure/llm/: claude_client.py  factory.py  gemini_provider.py  general_questions.py  mock_llm.py  ollama_provider.py
ai-service/app/infrastructure/persistence/: in_memory_session_repo.py
ai-service/app/ml/: train_cardiology.py
ai-service/migrations/: env.py
ai-service/scripts/: download_datasets.py
ai-service/tests/: test_cardiology_domain.py  test_triage_rules.py
backend/: Dockerfile  (+2 more)
(+197 files in other folders)
