[project]
name = "healthcare-ai-service"
version = "0.0.1"
description = "AI-powered healthcare diagnostic service (FastAPI + ML)"
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "anthropic>=0.39",
    "openai>=1.54",
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1",
    "mlflow>=2.16,<3.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.4",
    "structlog>=24.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=10.4",
    "pypdf>=5.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "black>=24.10",
    "mypy>=1.13",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
